[package]
name = "datadog-apm"
version = "0.2.0"
authors = ["Fernando Gonçalves <fernando.goncalves@pipefy.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Datadog apm low level client for rust"
homepage = "https://github.com/pipefy/datadog-apm-rust"
documentation = "https://docs.rs/datadog-apm"
repository = "https://github.com/pipefy/datadog-apm-rust"

[dependencies]
futures-util = "0.3.12"
hyper = "0.13"
rmp-serde = "0.14.2"
rmp = "0.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
rand = "0.3"
serde_json = "1"
